@@ -24,8 +24,12 @@ namespace Rivet {
     /// correction.
     CDF_2001_S4751469()
       : _cfsproj(-1.0, 1.0, 0.5*GeV), _fsproj(_cfsproj, 0.08), _trackjetproj(_fsproj),
-        _ptsumToward(0) ,_ptsumTrans(0), _ptsumAway(0),
-        _numToward(0) ,_numTrans(0), _numAway(0)
+	_totalNumTrans(0),
+        _ptsumTowardMB(0),  _ptsumTransMB(0),  _ptsumAwayMB(0),
+        _ptsumTowardJ20(0), _ptsumTransJ20(0), _ptsumAwayJ20(0),
+        _numTowardMB(0),  _numTransMB(0),  _numAwayMB(0),
+        _numTowardJ20(0), _numTransJ20(0), _numAwayJ20(0),
+        _ptTrans2(0), _ptTrans5(0), _ptTrans30(0)
     { 
       setBeams(PROTON, ANTIPROTON);
       addProjection(_cfsproj);
@@ -89,22 +93,26 @@ namespace Rivet {
     TrackJet _trackjetproj;
     //@}
 
+    /// Counter used to calculate the avg number of charged particles in the trans region.
+    double _totalNumTrans;
+
   private:
 
     /// @name Histogram collections
     //@{
     /// Profile histograms, binned in the \f$ p_T \f$ of the leading jet, for
     /// the \f$ p_T \f$ sum in the toward, transverse and away regions.
-    AIDA::IProfile1D* _ptsumToward;
-    AIDA::IProfile1D* _ptsumTrans;
-    AIDA::IProfile1D* _ptsumAway;
+    AIDA::IProfile1D *_ptsumTowardMB,  *_ptsumTransMB,  *_ptsumAwayMB;
+    AIDA::IProfile1D *_ptsumTowardJ20, *_ptsumTransJ20, *_ptsumAwayJ20;
 
     /// Profile histograms, binned in the \f$ p_T \f$ of the leading jet, for
     /// the number of charged particles per jet in the toward, transverse and
     /// away regions.
-    AIDA::IProfile1D* _numToward;
-    AIDA::IProfile1D* _numTrans;
-    AIDA::IProfile1D* _numAway;
+    AIDA::IProfile1D *_numTowardMB,  *_numTransMB,  *_numAwayMB;
+    AIDA::IProfile1D *_numTowardJ20, *_numTransJ20, *_numAwayJ20;
+
+    /// Histogram of \f$ p_T \f$ distribution for 3 different \f$ p_{T1} \f$ IR cutoffs.
+    AIDA::IHistogram1D *_ptTrans2, *_ptTrans5, *_ptTrans30;
     //@}
 
 
